--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       content="Web site created using create-react-app"
     />
 
+    <link rel="stylesheet" href="%PUBLIC_URL%/reset.css" />
+
     <title>Apollo 2020</title>
   </head>
   <body>
